# kypluk

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  kypluk.h  kyplukAlgorithm.h  kyplukAlgorithmNumber.h  kyplukArray.h  kyplukBigInteger.h  kyplukBigList.h  kyplukBits.h  kyplukData.h  kyplukDecimal.h  kyplukDefine.h  kyplukException.h  kyplukFunction.h  kyplukIterator.h  kyplukList.h  kyplukLogs.h  kyplukMath.h  kyplukPair.h  kyplukQueue.h  kyplukSharedVector.h  kyplukSmartPtr.h  kyplukStack.h  kyplukSyntacticSugar.h  kyplukTypedef.h  kyplukUtility.h  kyplukVector.h
benchmarks/: CMakeLists.txt
benchmarks/BigInteger/: ONVECTOR.cpp  add.cpp  experimental.cpp  mult.cpp
ci/travis/: install-linux.sh
experimental/: kyplukBigInteger.h
include/: kTrit.h  kypluk.h  kyplukAlgorithm.h  kyplukArray.h  kyplukBigInteger.h  kyplukBigList.h  kyplukBigNumbers.h  kyplukBits.h  kyplukData.h  kyplukDecimal.h  kyplukDefine.h  kyplukException.h  kyplukFunction.h  kyplukList.h  kyplukMath.h  kyplukPair.h  kyplukQueue.h  kyplukSharedVector.h  kyplukStack.h  kyplukUtility.h  kyplukVector.h
include/kypluk/: algorithm.h  array.h  big_integer.h  bitset.h  decimal.h  define.h  function.h  kTrit.h  list.h  logs.h  math.h  queue.h  smart_ptr.h  stack.h  test.h  trie.h  trit.h  typedef.h  unrolled_linked_list.h  utility.h  vector.h
include/kypluk/fast_math/: fast_math.h
include/kypluk/logs/: kLogs.cpp  kLogs.h
include/kypluk/num_array/: num_array.h
include/kypluk/parallel/: algorithm.h  future.h  thread_pool.h
include/logs/: kLogs.cpp  kLogs.h
num_array/: README.md  num_array.h
old_version/: kyplukBigInteger.h
src/kypluk/fast_math/: fast_math.cpp
test/: CMakeLists.txt  main.cpp  test.h  trit.h
test/BigInteger/: ONVECTOR.cpp  arithmetic.cpp  test.cpp
test/Decimal/: miller_test.cpp
test/List/: swap.cpp  test.cpp
test/Math/: sqrt.cpp  teylor.cpp
test/NumArray/: base.cpp
test/ParallelAlgorithm/: test.cpp
test/ThreadPool/: test.cpp
test/Trie/: test.cpp
test/Trit/: test.cpp  trit.cpp  trit.h
test/Vector/: base.cpp
tests/BigInteger/: ONVECTOR.cpp
tests/Decimal/: ara_test.cpp  base.cpp
tests/List/: splice.cpp
tests/Math/: teylor.cpp
tests/NumArray/: base.cpp
tests/Vector/: base.cpp
копия/: kypluk api.7z  kypluk.h  kyplukArray.h  kyplukList.h  kyplukOSfunction.h  kyplukString.h  kyplukStringFunction.h  kypluk_api.7z  kypluk_api.rar  kyplukdata.h  kyplukfunction.h  string.cpp
